# Villager-Bot

./: .dockerignore  .env.example  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile.base  LICENSE  PRIVACY-POLICY.md  README.md  TOPGG.md  TOS.md  __main__.py  bot.py  bot.sh  bruh.txt  currency.json  cursedimages.json  docker-compose.yml  enchantlang.json  eval.txt  git_pull_log  playing.txt  pyproject.toml  requirements.txt  secrets.example.json  server_list.txt  setup.py  setup.sql  test.py  to_translate.json  topgg.md  uptime.txt  villager-bot.bat  villager-bot.py  villager-bot.sh  villagerbot_db.backup  villagerbot_db_backup  villagerlang.json  wrapper.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  cd.yml  ci.yml  codestyle.yml  flake8.yml
bot/: Dockerfile  __main__.py  bot.py  build_tiler.py  karen.py  pyproject.toml  secrets.example.json  villager_bot.py
bot/data/: blockifier_generator.py  check_text.py  data.json
bot/models/: data.py  fwd_dm.py  item.py  logging_config.py  secrets.py  translation.py
bot/scripts/: __init__.py  check_text.py  generate_blockify_data.py
bot/util/: code.py  ctx.py  ipc.py  recurring_task.py  setup.py
bot/utils/: add_cython_ext.py  command_converters.py  cooldowns.py  ctx.py  database_proxy.py  errors.py  ipc.py  karen_client.py  misc.py  setup.py
cogs/: admincmds.py  cmds.py  currency.py  currency2.py  events.py  idk.py  loops.py  msgs.py  owner.py  russian.py  stats.py  track.py  xenon.py
cogs/cmds/: config.py  econ.py  fun.py  mc.py  mod.py  owner.py  slash.py  text.py  useful.py
cogs/commands/: admin.py  econ.py  fun.py  mc.py  settings.py  useful.py
cogs/core/: Exceptions.py  botlists.py  database.py  events.py  loops.py  webhooks.py
cogs/database/: database.py
cogs/other/: errors.py  events.py  global.py  loops.py  mobs.py  mobspawning.py  msgs.py  statcord.py  status.py  webhooks.py
cogs/owner/: owner.py
common/: data.json
common/coms/: client.py  coms_base.py  errors.py  json_encoder.py  packet.py  packet_handling.py  packet_type.py  server.py
common/data/: data.json
common/models/: base.py  base_model.py  data.py  logging_config.py  secrets.py  system_stats.py  topgg_vote.py
data/: block_palette.json  build_ideas.json  collectable_items.json  config.json  cursed_images.json  data.json  default_items.json  eval.txt  global.py  item-emotes.json  items.json  keys.example.json  keys.json  keys.json.example  lang.json  minecraft_servers.json  playing_list.json  shop_items.json  text.json  translation_template.json  translation_template_en.json
discord/: Dockerfile  docker-replica-id.sh  pyproject.toml
discord/bot/: __main__.py  villager_bot.py
discord/bot/cogs/commands/: config.py  econ.py  fun.py  minecraft.py  mod.py  owner.py  useful.py
discord/bot/cogs/core/: badges.py  database.py  events.py  loops.py  mobs.py  paginator.py  quests.py  voting.py
discord/bot/data/text/: en.json  nl.json  pt.json
discord/bot/logic/: command_errors.py  ctx.py  emojification.py  errors.py  formatting.py  home_guild.py  leaderboards.py  progress_bar.py  setup.py  users.py
discord/bot/models/: base_model.py  data.py  logging_config.py  secrets.py  translation.py
discord/bot/models/db/: user.py
discord/bot/services/karen/: __init__.py  cache.py  client.py  errors.py  utils.py
discord/bot/services/karen/resources/: command_executions.py  users.py
discord/bot/services/karen/resources/commands/: __init__.py  profile.py  shop.py  vault.py
discord/bot/services/karen/resources/discord/: __init__.py  discord_guild.py  guild.py
discord/bot/services/karen/resources/game/: __init__.py  command_cooldowns.py  command_executions.py
discord/bot/services/karen/resources/game/commands/: __init__.py  profile.py
discord/bot/services/karen/resources/users/: __init__.py  badges.py  items.py
discord/bot/tests/test_utils/: test_urls.py
discord/bot/utils/: aiohttp_helpers.py  code.py  cython_ext.py  date_and_time.py  default_sentinel.py  discord_helpers.py  font_handler.py  misc.py  recurring_tasks.py  setup.py  text.py  urls.py  validate_return_type.py
discord/scripts/: check_text.py  format_and_lint.py
docs/: topgg.md
karen/: Cargo.toml  Dockerfile  __main__.py  karen.py  secrets.example.json
karen/data/: commands.json  fishing.json  items.json  mobs.json
karen/migrations/: 20250419192701_initial.down.sql  20250419192701_initial.up.sql  20250419193859_rewrite5.down.sql  20250419193859_rewrite5.up.sql
karen/models/: secrets.py
karen/src/: config.rs  main.rs
karen/src/common/: data.rs  game_errors.rs  hex.rs  mod.rs  response_errors.rs  security.rs  serde_helpers.rs  testing.rs  user_id.rs  xid.rs
karen/src/common/testing/: app.rs  db.rs  mod.rs
karen/src/logic/: badges.rs  command_executions.rs  discord_guilds.rs  fishing.rs  items.rs  leaderboards.rs  mod.rs  user_effects.rs  user_locks.rs  user_tools.rs  users.rs
karen/src/logic/check_data/: check_items_data.rs  mod.rs
karen/src/logic/commands/: profile.rs
karen/src/logic/game/: badges.rs  cooldowns.rs  mod.rs
karen/src/logic/game/commands/: profile.rs
karen/src/models/: discord_guild.rs  item.rs  mod.rs  user.rs
karen/src/models/data/: commands.rs  fishing.rs  items.rs  mobs.rs  mod.rs
karen/src/models/db/: badges.rs  command_cooldown.rs  discord_guild.rs  item.rs  leaderboards.rs  mod.rs  user.rs
karen/src/routes/: command_executions.rs  mod.rs  users.rs
karen/src/routes/commands/: mod.rs  profile.rs  shop.rs  vault.rs
karen/src/routes/discord/: guilds.rs  mod.rs
karen/src/routes/game/: badges.rs  command_cooldowns.rs  command_executions.rs  cooldowns.rs  mod.rs
karen/src/routes/game/commands/: mod.rs
karen/src/routes/users/: badges.rs  items.rs  mod.rs  user.rs
karen/utils/: cooldowns.py  setup.py  shard_ids.py  topgg.py
scripts/: __init__.py  check_text.py  format.py  generate_blockify_data.py
src/: bot.py
util/: math.py  math_parser.py  misc.py  mosaic.py  setup.py  sizeof.py
villager-bot/: __main__.py  bot.py  karen.py
(+131 files in other folders)
