[tool.poetry]
name = "Villager-Bot"
version = "0.0.1"
description = ""
authors = ["Milo Weinberg <iapetus011@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "^0.26.0"
aiofiles = "^0.7.0"
aiohttp = "^3.7.4"
arrow = "^1.1.0"
async-cse = "^0.3.0"
aio-mc-rcon = "^3.0.2"
cryptography = "^3.4.7"
Cython = "^0.29.23"
numpy = "^1.20.3"
opencv-python = "^4.5.2"
imageio = "^2.9.0"
Pillow = "^9.2.0"
psutil = "^5.9.0"
moviepy = "^1.0.3"
pydantic = "^1.9.1"
websockets = "^10.3"
classy-json = "^3.2.1"
python-dotenv = "^0.20.0"
"discord.py" = "^2.0.0"
colorlog = "^6.6.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^3.9.2"
mypy = "^0.971"
asyncpg-stubs = "^0.26.2"
types-psutil = "^5.9.3"
isort = "^5.10.1"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
known_bot = ["bot"]
known_karen = ["karen"]
known_common = ["common"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "COMMON", "BOT", "KAREN", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
plugins = ["pydantic.mypy"]
files = ["common/**/*.py", "karen/**/*.py"]
python_version = "3.10"
warn_unused_configs = true
namespace_packages = true
explicit_package_bases = true
