[tool.poetry]
name = "Villager-Bot"
version = "0.0.1"
description = ""
authors = ["Milo Weinberg <iapetus011@gmail.com>"]
license = "MIT"
packages = [
    { include = "bot" },
    { include = "common" },
    { include = "karen" },
    { include = "scripts" },
]

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "^0.26.0"
aiofiles = "^23.1.0"
aiohttp = "^3.9.5"
arrow = "^1.3.0"
async-cse = "^0.3.0"
aio-mc-rcon = "^3.0.2"
cryptography = "^42.0.7"
Cython = "^0.29.33"
numpy = "^1.20.3"
opencv-python = "^4.5.2"
imageio = "^2.9.0"
Pillow = "^10.3.0"
psutil = "^5.9.4"
moviepy = "^1.0.3"
pydantic = "^1.10.5"
websockets = "^12.0"
classy-json = "^3.2.1"
python-dotenv = "^1.0.0"
"discord.py" = "^2.3.2"
colorlog = "^6.6.0"
captcha = "^0.4"
ruff = "^0.0.270"
minecraftstatus = "^0.0.9"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
mypy = "^0.981"
asyncpg-stubs = "^0.26.2"
types-psutil = "^5.9.3"
isort = "^5.10.1"
autoflake = "^1.4"
pytest = "^7.1.3"
types-aiofiles = "^22.1.0.9"

[tool.poetry.scripts]
check_text = { callable = "scripts:check_text" }
format = { callable = "scripts:format" }
generate_blockify_data = { callable = "scripts:generate_blockify_data" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
ignore = ["E501", "E266", "E203", "E741", "W293", "W291"]
target-version = "py310"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
known_bot = ["bot"]
known_karen = ["karen"]
known_common = ["common"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "COMMON", "BOT", "KAREN", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
plugins = ["pydantic.mypy"]
files = ["common/**/*.py", "karen/**/*.py", "scripts/**/*.py"]
python_version = "3.10"
warn_unused_configs = true
namespace_packages = true
explicit_package_bases = true

[tool.pytest.ini_options]
pythonpath = ["."]
