[package]
name = "karen"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
poem = { version = "3.1.10", features = ["test"] }
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
subtle = "2.6.1"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
xid = "1.1.1"
